--- a/content/resources/mit6_801f20_hw1.md
+++ b/content/resources/mit6_801f20_hw1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-801-machine-vision-fall-2020/44cf7a39fd1de47fc359dc801be9c9fc_MIT6_801F20_hw1.pdf
 file_type: application/pdf
+parent_uid: e1b409b7-b855-0094-48d0-163c342fd6f7
 resourcetype: Document
 title: 6.801/6.866 Machine Vision, Homework 1
 uid: 44cf7a39-fd1d-e47f-c359-dc801be9c9fc
