--- a/content/resources/mit6_801f20_hw2.md
+++ b/content/resources/mit6_801f20_hw2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-801-machine-vision-fall-2020/480e8d0833ac9552ee071d15319ef2cf_MIT6_801F20_hw2.pdf
 file_type: application/pdf
+parent_uid: e1b409b7-b855-0094-48d0-163c342fd6f7
 resourcetype: Document
 title: 6.801/6.866 Machine Vision, Homework 2
 uid: 480e8d08-33ac-9552-ee07-1d15319ef2cf
