--- a/content/resources/mit6_801f20_hw5.md
+++ b/content/resources/mit6_801f20_hw5.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-801-machine-vision-fall-2020/9ff064d1c944de62cb896e7c9d9571db_MIT6_801F20_hw5.pdf
 file_type: application/pdf
+parent_uid: e1b409b7-b855-0094-48d0-163c342fd6f7
 resourcetype: Document
 title: 6.801/6.866 Machine Vision, Homework 5
 uid: 9ff064d1-c944-de62-cb89-6e7c9d9571db
