--- a/content/resources/mit6_801f20_lec11.md
+++ b/content/resources/mit6_801f20_lec11.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-801-machine-vision-fall-2020/5b03361b8fe3ccb51a0ce3c685dd88ae_MIT6_801F20_lec11.pdf
 file_type: application/pdf
+parent_uid: 08febb1f-ebe2-9c29-04c1-e6e024b1a469
 resourcetype: Document
 title: '6.801/6.866: Machine Vision, Lecture 11'
 uid: 5b03361b-8fe3-ccb5-1a0c-e3c685dd88ae
