--- a/content/resources/mit6_801f20_lec13.md
+++ b/content/resources/mit6_801f20_lec13.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-801-machine-vision-fall-2020/63bf90743360a41d70eda346816d8304_MIT6_801F20_lec13.pdf
 file_type: application/pdf
+parent_uid: 08febb1f-ebe2-9c29-04c1-e6e024b1a469
 resourcetype: Document
 title: '6.801/6.866: Machine Vision, Lecture 13'
 uid: 63bf9074-3360-a41d-70ed-a346816d8304
