--- a/content/resources/mit6_801f20_lec14.md
+++ b/content/resources/mit6_801f20_lec14.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-801-machine-vision-fall-2020/783e51bd8138fb098f22554024a57459_MIT6_801F20_lec14.pdf
 file_type: application/pdf
+parent_uid: 08febb1f-ebe2-9c29-04c1-e6e024b1a469
 resourcetype: Document
 title: '6.801/6.866: Machine Vision, Lecture 14'
 uid: 783e51bd-8138-fb09-8f22-554024a57459
