--- a/content/resources/mit6_801f20_lec15.md
+++ b/content/resources/mit6_801f20_lec15.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-801-machine-vision-fall-2020/c22810674f0599193f8b553b348de3b6_MIT6_801F20_lec15.pdf
 file_type: application/pdf
+parent_uid: 08febb1f-ebe2-9c29-04c1-e6e024b1a469
 resourcetype: Document
 title: '6.801/6.866: Machine Vision, Lecture 15'
 uid: c2281067-4f05-9919-3f8b-553b348de3b6
