--- a/content/resources/mit6_801f20_lec17.md
+++ b/content/resources/mit6_801f20_lec17.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-801-machine-vision-fall-2020/e11dd76b64a8bd8ee48efefcdeea2bf6_MIT6_801F20_lec17.pdf
 file_type: application/pdf
+parent_uid: 08febb1f-ebe2-9c29-04c1-e6e024b1a469
 resourcetype: Document
 title: '6.801/6.866: Machine Vision, Lecture 17'
 uid: e11dd76b-64a8-bd8e-e48e-fefcdeea2bf6
