--- a/content/resources/mit6_801f20_lec18.md
+++ b/content/resources/mit6_801f20_lec18.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-801-machine-vision-fall-2020/fac101ccf4d7b8cdf775666d2d1e2146_MIT6_801F20_lec18.pdf
 file_type: application/pdf
+parent_uid: 08febb1f-ebe2-9c29-04c1-e6e024b1a469
 resourcetype: Document
 title: '6.801/6.866: Machine Vision, Lecture 18'
 uid: fac101cc-f4d7-b8cd-f775-666d2d1e2146
