--- a/content/resources/mit6_801f20_lec2.md
+++ b/content/resources/mit6_801f20_lec2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-801-machine-vision-fall-2020/5546a6b8d36a2d997929ba1aeb8c5ed3_MIT6_801F20_lec2.pdf
 file_type: application/pdf
+parent_uid: 08febb1f-ebe2-9c29-04c1-e6e024b1a469
 resourcetype: Document
 title: 6.801 / 6.868 Machine Vision, Lecture 2
 uid: 5546a6b8-d36a-2d99-7929-ba1aeb8c5ed3
