--- a/content/resources/mit6_801f20_lec20.md
+++ b/content/resources/mit6_801f20_lec20.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-801-machine-vision-fall-2020/5e98d8a6c0edce797859526dece67aea_MIT6_801F20_lec20.pdf
 file_type: application/pdf
+parent_uid: 08febb1f-ebe2-9c29-04c1-e6e024b1a469
 resourcetype: Document
 title: 6.801 / 6.866 Machine Vision, Lecture 20
 uid: 5e98d8a6-c0ed-ce79-7859-526dece67aea
