--- a/content/resources/mit6_801f20_lec4.md
+++ b/content/resources/mit6_801f20_lec4.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-801-machine-vision-fall-2020/d77aaf27b83126aca7f3afe1f0dcd808_MIT6_801F20_lec4.pdf
 file_type: application/pdf
+parent_uid: 08febb1f-ebe2-9c29-04c1-e6e024b1a469
 resourcetype: Document
 title: '6.801/6.866: Machine Vision, Lecture 4'
 uid: d77aaf27-b831-26ac-a7f3-afe1f0dcd808
