--- a/content/resources/mit6_801f20_lec6.md
+++ b/content/resources/mit6_801f20_lec6.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-801-machine-vision-fall-2020/75d0a565a80b022f2816f53616c45721_MIT6_801F20_lec6.pdf
 file_type: application/pdf
+parent_uid: 08febb1f-ebe2-9c29-04c1-e6e024b1a469
 resourcetype: Document
 title: '6.801/6.866: Machine Vision, Lecture 6'
 uid: 75d0a565-a80b-022f-2816-f53616c45721
