--- a/content/resources/mit6_801f20_lec7.md
+++ b/content/resources/mit6_801f20_lec7.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-801-machine-vision-fall-2020/0e2c2f75b7dc6602db91b55694ab963e_MIT6_801F20_lec7.pdf
 file_type: application/pdf
+parent_uid: 08febb1f-ebe2-9c29-04c1-e6e024b1a469
 resourcetype: Document
 title: '6.801/6.866: Machine Vision, Lecture 7'
 uid: 0e2c2f75-b7dc-6602-db91-b55694ab963e
